@@ -1,0 +1,4 @@
+header1|header2|header3
+foo|bar|baz
+one|two|three
+1|2|3
