@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 1.04
+    - Spreadsheet::Read options now available via ::File::Loader
 
 1.03
     - init HTML::TableExtract with ( decode => 0 )
